--- a/site/index.html
+++ b/site/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <h1> Hello Coursera!It's a great day!</h1>
+<h1> Started this new course on HTML,CSS & Javascript & Web Developers</h1>
 </body>
 </html>
