New line updated.

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1> Hello Coursera!It's a great day!</h1>
+<h1> Hello Coursera! My name is Uma Mahesh!</h1>
 <h1> Started this new course on HTML,CSS & Javascript & Web Developers</h1>
 </body>
 </html>
