--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1> Hello Coursera! My name is Uma Mahesh!</h1>
-<h1> Started this new course on HTML,CSS & Javascript & Web Developers</h1>
+<p> Started this new course on <d> HTML,CSS & Javascript & Web Developers</d>.</p>
 </body>
 </html>
