updated with images of oreo

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,29 @@
 </head>
 <body>
 <h1> Hello Coursera! My name is Uma Mahesh!</h1>
-<p> Started this new course on <d> HTML,CSS & Javascript & Web Developers</d>.</p>
+<h2> this new course on HTML,CSS & Javascript&nbsp;&&nbsp;Web&nbsp;Developers</h2>
+<p>
+	<div>
+	Oreo cooking eating procedure:
+	<img src="oreo_chocolate.jpg" width="500" height="500"alt="_Oreo Chocolate_">
+	<ol>
+			<li> Open box</li> 
+			<li> Take out cookies</li>
+			<li>Make a double oreo
+				<ol>
+					<li>Peel off the top part</li>
+					<li>Place another cookie in the middle</li> 
+					<li> Put the top part</li>
+				</ol>
+	
+
+	
+			</li>
+	 <li>Enjoy!</li>
+	 <img src="https://image.shutterstock.com/image-photo/plate-slice-tasty-homemade-chocolate-600w-1295709469.jpg" width="640" height="480">
+<h5>Subject to &copy; Copyright</h5>
+</ol>
+</div>
+</p>
 </body>
 </html>
